developing scss styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/eebb423b1e.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital@0;1&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <title>Home</title>
 </head>
 
@@ -17,7 +19,7 @@
             <!--Site Heading/Logo-->
             <h1>delicious</h1>
             <!--Navigation Starts-->
-            <nav>
+            <nav class="headNav">
                 <ul>
                     <li><a href="#home">home</a></li>
                     <li><a href="#about">about</a></li>
@@ -144,9 +146,12 @@
         </section>
         <!--End Client Review Section-->
 
+        <!--Footer Start-->
         <footer>
+            <!--Footer Wrapper Start-->
             <div>
                 <div>
+                    <!--1st Footer Section-->
                     <h2>delicious</h2>
                     <ul>
                         <li>
@@ -163,7 +168,9 @@
                         </li>
                     </ul>
                 </div>
+                <!--End 1st Footer Section-->
 
+                <!--2nd Footer Section-->
                 <div>
                     <h3>recent posts</h3>
                     <ul>
@@ -199,21 +206,26 @@
                         </li>
                     </ul>
                 </div>
+                <!--End 2nd Footer Section-->
 
+                <!--3rd Footer Section-->
                 <div>
                     <h3>subscribe now</h3>
                     <p>Get all of our newest recipes immediately in your inbox</p>
+                    <!--Contact Form-->
                     <form action="">
                         <label for="email" aria="hidden" class="sr-only">email</label>
                         <input type="email" name="email" placeholder="Enter your email" required>
                         <button type="submit"><i class="fas fa-long-arrow-alt-right"></i></button>
                     </form>
+                    <!--Social Media Links-->
                     <ul>
                         <li><i class="fab fa-facebook-f"></i></li>
                         <li><i class="fab fa-twitter"></i></li>
                         <li><i class="fab fa-instagram"></i></li>
                     </ul>
                 </div>
+                <!--End 3rd Footer Section-->
 
             </div>
             <div>
