--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital@0;1&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <title>Contact</title>
 </head>
 
@@ -37,6 +39,7 @@
     </header>
     <!--End of Header Section-->
 
+    <!--Main Page Section-->
     <section>
         <div>
             <div>
@@ -74,7 +77,7 @@
                 <p>+1 234 567 8910</p>
             </div>
         </div>
-        <div><img src="" alt=""></div>
+        <div class="banner"></div>
     </section>
 
 
