--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css">
     <script src="https://kit.fontawesome.com/eebb423b1e.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital@0;1&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
@@ -15,23 +16,25 @@
     <!--Header Starts-->
     <header>
         <!--Wrapper Starts-->
-        <div>
+        <div class="wrapper nav__wrapper">
             <!--Site Heading/Logo-->
             <h1>delicious</h1>
             <!--Navigation Starts-->
-            <nav class="headNav">
-                <ul>
-                    <li><a href="#home">home</a></li>
-                    <li><a href="#about">about</a></li>
-                    <li><a href="#recipes">recipes</a></li>
-                    <li><a href="#nutrition">nutrition</a></li>
-                    <li><a href="#blog">blog</a></li>
-                    <li><a href="#shop">shop</a></li>
-                    <li><a href="#contact">contact</a></li>
+            <nav class="head__nav">
+                <ul class="nav__list">
+                    <li class="nav__link"><a href="#home">home</a></li>
+                    <li class="nav__link"><a href="#about">about</a></li>
+                    <li class="nav__link"><a href="#recipes">recipes</a></li>
+                    <li class="nav__link"><a href="#nutrition">nutrition</a></li>
+                    <li class="nav__link"><a href="#blog">blog</a></li>
+                    <li class="nav__link"><a href="#shop">shop</a></li>
+                    <li class="nav__link"><a href="#contact">contact</a></li>
                     <!--Shopping Icon - remember a11y-->
-                    <li><i class="fas fa-shopping-bag"></i></li>
+                    <button class="menu__button"><i class="fas fa-shopping-bag"></i></button>
                     <!--Search Icon - remember a11y-->
-                    <li><i class="fas fa-search"></i></li>
+                    <button class="menu__button"><i class="fas fa-search"></i></button>
+                    <!--Hidden Hamburger Menu Button-->
+                    <button class="burger__menu"><i class="fas fa-bars"></i></button>
                 </ul>
             </nav>
             <!--Navigation ends here-->
