--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 <body>
     <!--Header Starts-->
-    <header>
+    <header class="contact__header">
         <!--Wrapper Starts-->
         <div>
             <!--Site Heading/Logo-->
