removed test files and reset project

--- a/index.html
+++ b/index.html
@@ -267,24 +267,7 @@
 
     </main>
     <script>
-        const siteMenu = {};
-        siteMenu.navHeader = document.getElementById("headNav");
-        siteMenu.navBurger = document.getElementById("burgerMenu");
-        siteMenu.navList = document.getElementById("navList");
-
-        console.log(siteMenu);
-
-        siteMenu.navBurger.addEventListener('click', function() {
-            if (siteMenu.navList.className === "nav__list") {
-                siteMenu.navList.className = "nav__list--toggle";
-                siteMenu.navHeader.style.overflow = "visible";
-            } else if (siteMenu.navList.className === "nav__list--toggle") {
-                siteMenu.navList.className = "nav__list";
-                siteMenu.navHeader.style.overflow = "hidden";
-            }
-        });
-
-        // attach an event listener to the hamburger menu icon
+        // test js went here
     </script>
 
 </body>
